# ipc

./: CMakeLists.txt  main.cpp
headers/: ipc_fifo.h  ipc_half_duplex.h
ipcFifoClient/: CMakeLists.txt  main.cpp
ipcFifoServer/: CMakeLists.txt  main.cpp
ipcHalfDuplex/: CMakeLists.txt  main.cpp
old_proj_structure/: CMakeLists.txt  main.cpp
old_proj_structure/headers/: ipc_fifo.h
old_proj_structure/src/: ipc_half_duplex.cpp
src/: ipc_fifo.cpp  ipc_half_duplex.cpp
